🐛fix button being covered by img & rename container

--- a/src/components/news-page/news-page.styles.scss
+++ b/src/components/news-page/news-page.styles.scss
@@ -22,7 +22,7 @@
     letter-spacing: 0.8px;
 }
 
-.container-container {
+.center-ncg-container {
     display: flex;
     justify-content: center;
 }
